--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="row">
                 <div class="col">
                   <a href="assets/Dinesh-Developer-Resume-2025.pdf" style="text-decoration: none;" target="_blank">
-                    <button type="button" class="rounded-pill btn-rounded border-primary">Download My Resume
+                    <button type="button" class="rounded-pill btn-rounded border-primary">My&nbsp;Resume
                       <span><i class="fas fa-arrow-down"></i></span>
                     </button>
                   </a>
@@ -201,7 +201,7 @@
 
                 <div class="col">
                   <a href="https://www.linkedin.com/in/hasinii" style="text-decoration: none;" target="_blank">
-                    <button type="button" class="rounded-pill btn-rounded border-primary">Goto My LinkedIn
+                    <button type="button" class="rounded-pill btn-rounded border-primary">My&nbsp;LinkedIn
                       <span><i class="fab fa-linkedin"></i></span>
                     </button>
                   </a>
@@ -945,46 +945,83 @@
                 </div>
 
                 <!-- Contact Form -->
-                <form action="https://formsubmit.co/dinesh.developer.us@gmail.com" method="POST" id="modernContactForm">
+                <!-- Contact Form -->
+<!-- Contact Form -->
+<form action="send-email.php" method="POST" id="modernContactForm">
+  <div class="form-floating mb-3">
+    <input type="text" name="name" class="form-control border-0 shadow-sm" id="inputName" placeholder="Name" required>
+    <label for="inputName">Full Name</label>
+  </div>
 
-                  <!-- Name -->
-                  <div class="form-floating mb-3">
-                    <input type="text" name="name" class="form-control border-0 shadow-sm" id="inputName"
-                      placeholder="Name" required>
-                    <label for="inputName">Full Name</label>
-                  </div>
+  <div class="form-floating mb-3">
+    <input type="email" name="email" class="form-control border-0 shadow-sm" id="inputEmail" placeholder="Email" required>
+    <label for="inputEmail">Email address</label>
+  </div>
 
-                  <!-- Email -->
-                  <div class="form-floating mb-3">
-                    <input type="email" name="email" class="form-control border-0 shadow-sm" id="inputEmail"
-                      placeholder="Email" required>
-                    <label for="inputEmail">Email address</label>
-                  </div>
+  <div class="form-floating mb-4">
+    <textarea name="message" class="form-control border-0 shadow-sm" id="inputMessage" style="height: 150px;" required></textarea>
+    <label for="inputMessage">Your Message</label>
+  </div>
 
-                  <!-- Message -->
-                  <div class="form-floating mb-4">
-                    <textarea name="message" class="form-control border-0 shadow-sm" placeholder="Leave a message"
-                      id="inputMessage" style="height: 150px;" required></textarea>
-                    <label for="inputMessage">Your Message</label>
-                  </div>
+  <input type="text" name="honeypot" style="display:none;"> <!-- Hidden spam field -->
 
-                  <!-- Hidden Options -->
-                  <input type="hidden" name="_captcha" value="false">
-                  <input type="hidden" name="_template" value="table">
+  <button type="submit" class="btn btn-gradient w-100 rounded-pill fw-semibold">
+    Send Message <i class="fas fa-paper-plane ms-2"></i>
+  </button>
+</form>
 
-                  <!-- Submit -->
-                  <button type="submit" class="btn btn-gradient w-100 rounded-pill fw-semibold">
-                    Send Message <i class="fas fa-paper-plane ms-2"></i>
-                  </button>
+<div id="formStatus" class="mt-3"></div>
 
-                </form>
+<!-- AJAX Submit Script -->
+<script>
+document.getElementById("modernContactForm").addEventListener("submit", async function (e) {
+  e.preventDefault();
+  const form = e.target;
+  const formData = new FormData(form);
+  const statusDiv = document.getElementById("formStatus");
+
+  try {
+    const response = await fetch(form.action, {
+      method: "POST",
+      body: formData
+    });
+
+    const text = await response.text();
+    statusDiv.innerHTML = `<div class="alert alert-info">Thanks! for contacting Dinesh</div>`;
+    form.reset();
+  } catch (error) {
+    statusDiv.innerHTML = `<div class="alert alert-danger">An error occurred. Please try again or Call me.</div>`;
+  }
+});
+</script>
+
+<div id="formStatus" class="mt-3"></div>
+
               </div>
             </div>
           </section>
           <script>
-            document.getElementById("modernContactForm").addEventListener("submit", function () {
-              alert("✅ Thank you! Your message has been sent.");
-            });
+            document.getElementById("modernContactForm").addEventListener("submit", async function (e) {
+  e.preventDefault();
+
+  const form = e.target;
+  const formData = new FormData(form);
+  const statusDiv = document.getElementById("formStatus");
+
+  try {
+    const response = await fetch(form.action, {
+      method: "POST",
+      body: formData,
+    });
+
+    const text = await response.text();
+    statusDiv.innerHTML = `<div class="alert alert-info">${text}</div>`;
+    form.reset();
+  } catch (error) {
+    statusDiv.innerHTML = `<div class="alert alert-danger">An error occurred. Please try again.</div>`;
+  }
+});
+
           </script>
           <!-- Custom CSS -->
           <style>
